Linking the right page from it's folder

--- a/html/pages/products4.html
+++ b/html/pages/products4.html
@@ -19,7 +19,7 @@
         <nav>
             <ul id="menuitems">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="products.html">Products</a></li>
+                <li><a href="/html/pages/products.html">/html/pages/Products</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="account.html">Account</a></li>
@@ -35,7 +35,7 @@
 
 <div class="small-container">
     <div class="row row-2" >
-        <h2>All Products</h2>
+        <h2>All /html/pages/Products</h2>
         <select>
             <option>Default Sorting</option>
             <option>Sort by price</option>
@@ -156,11 +156,11 @@
     </div>
     </div>
     <div class="page-btn">
-        <span><a href="products3.html">&#8592</a></span>
-        <span><a href="products.html"> 1</a></span>
-        <span><a href="products2.html">2</a></span>
-        <span><a href="products3.html"> 3</a></span>
-        <span><a href="products4.html"> 4 </a></span>
+        <span><a href="/html/pages/products3.html">&#8592</a></span>
+        <span><a href="/html/pages/products.html"> 1</a></span>
+        <span><a href="/html/pages/products2.html">2</a></span>
+        <span><a href="/html/pages/products3.html"> 3</a></span>
+        <span><a href="/html/pages/products4.html"> 4 </a></span>
         
 
     </div>
