products page had an error

--- a/html/pages/products4.html
+++ b/html/pages/products4.html
@@ -19,7 +19,7 @@
         <nav>
             <ul id="menuitems">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="/html/pages/products.html">/html/pages/Products</a></li>
+                <li><a href="/html/pages/products.html">Products</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="account.html">Account</a></li>
