changes to project

--- a/html/pages/products.html
+++ b/html/pages/products.html
@@ -25,7 +25,7 @@
                 <li><a href="/html/pages/account.html">Account</a></li>
             </ul>
         </nav>
-        <a href="/html/products/cart.html" > <img src="/pics/cart.png" width="30px" height="30px" > </a>
+        <a href="/html/pages/cart.html" > <img src="/pics/cart.png" width="30px" height="30px" > </a>
         <img src="/pics/menu.png" class="menu-icon" 
         onclick="menutoggle()">
      </div>
