--- a/html/pages/products2.html
+++ b/html/pages/products2.html
@@ -19,7 +19,7 @@
         <nav>
             <ul id="menuitems">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="/html/pages/products.html">/html/pages/Products</a></li>
+                <li><a href="/html/pages/products.html">Products</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="account.html">Account</a></li>
@@ -35,7 +35,7 @@
 
 <div class="small-container">
     <div class="row row-2" >
-        <h2>All /html/pages/Products</h2>
+        <h2>All Products</h2>
         <select>
             <option>Default Sorting</option>
             <option>Sort by price</option>
@@ -46,17 +46,17 @@
     </div>
     <div class="row">
         <div class="col-4">
-            <a href="auntitemary.html">   <img src="/pics/auntiemary.jfif" > </a>
+            <a href="/html/products/auntitemary.html">   <img src="/pics/auntiemary.jfif" > </a>
             <h4>AUNTIE MARY  GRIPE WATER </h4>
             <p>$25</p>
         </div>
         <div class="col-4">
-          <a href="abidecsyrup.html">  <img src="/pics/abidecsyr.jpg"> </a>
+          <a href="/html/products/abidecsyrup.html">  <img src="/pics/abidecsyr.jpg"> </a>
             <h4>ABIDEC SYRUP</h4>
             <p>$65</p>
         </div>
         <div class="col-4">
-         <a href="addyzoa.html">   <img src="/pics/addyzoa.jpg"> </a>
+         <a href="/html/products/addyzoa.html">   <img src="/pics/addyzoa.jpg"> </a>
             <h4>ADDYZOA</h4>
             <p>$25</p>
         </div>
