--- a/html/products/alka5.html
+++ b/html/products/alka5.html
@@ -25,7 +25,7 @@
                 <li><a href="/html/pages/account.html">Account</a></li>
             </ul>
         </nav>
-        <img src="/pics/cart.png" width="30px" height="30px">
+     <a href="/html/pages/cart.html">   <img src="/pics/cart.png" width="30px" height="30px"></a>
         <img src="/pics/menu.png" class="menu-icon" 
         onclick="menutoggle()">
      </div>
@@ -51,7 +51,7 @@
                 <h4>$65</h4>
 
                 <input type="number" value="1">
-                <a href="/html/products/alka5.html" class="btn" onclick="alert('Your item have been added successfuly')">Add To Cart</a>
+                <button class="btn" id="addToCart" onclick="addToCart(event)"> Add To Cart </button>
                 <h3>Product Details</h3>
                 <br>
                 <p>ALKA 5 Syrup works as an alkaliser in the human <br>
@@ -140,9 +140,9 @@
               </div>
             <div class="footer-col-4">
                 <h3>Follow Us</h3>
-                <a href="/html/pages/https://twitter.com/" target="_blank"> <ion-icon name="logo-twitter"></ion-icon></a>
-                <a href="/html/pages/https://www.facebook.com/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
-                <a href="/html/pages/https://www.youtube.com/" target="_blank">  <ion-icon name="logo-youtube" style="color: red;"></ion-icon></a>
+                <a href="https://twitter.com/" target="_blank"> <ion-icon name="logo-twitter"></ion-icon></a>
+                <a href="https://www.facebook.com/" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="https://www.youtube.com/" target="_blank">  <ion-icon name="logo-youtube" style="color: red;"></ion-icon></a>
             </div>
         </div>
         <hr>
