--- a/html/pages/products4.html
+++ b/html/pages/products4.html
@@ -35,7 +35,7 @@
 
 <div class="small-container">
     <div class="row row-2" >
-        <h2>All /html/pages/Products</h2>
+        <h2>All Products</h2>
         <select>
             <option>Default Sorting</option>
             <option>Sort by price</option>
