--- a/html/products/coa.html
+++ b/html/products/coa.html
@@ -14,7 +14,7 @@
     <div class="container"> 
     <div class="navbar">
     <div class="logo">
-        <a href="/html/pages/index.html" >    <img src="pics/storelogo1.png" width="125px"> </a>
+        <a href="/html/pages/index.html" >    <img src="/pics/storelogo1.png" width="125px"> </a>
      </div>
         <nav>
             <ul id="menuitems">
@@ -25,8 +25,8 @@
                 <li><a href="/html/pages/account.html">Account</a></li>
             </ul>
         </nav>
-        <img src="pics/cart.png" width="30px" height="30px">
-        <img src="pics/menu.png" class="menu-icon" 
+        <img src="/pics/cart.png" width="30px" height="30px">
+        <img src="/pics/menu.png" class="menu-icon" 
         onclick="menutoggle()">
      </div>
      
