--- a/html/products/coartem.html
+++ b/html/products/coartem.html
@@ -25,7 +25,7 @@
                 <li><a href="account.html">Account</a></li>
             </ul>
         </nav>
-        <img src="/pics/cart.png" width="30px" height="30px">
+      <a href="/html/pages/cart.html">  <img src="/pics/cart.png" width="30px" height="30px"></a> 
         <img src="/pics/menu.png" class="menu-icon" 
         onclick="menutoggle()">
      </div>
@@ -49,9 +49,7 @@
                 
                 <h1>COARTEM 80/480MG</h1>
                 <h4>$60</h4>
-
-                <input type="number" value="1">
-                <a href="" class="btn" onclick="alert('Your item have been added successfuly')">Add To Cart</a>
+                <button class="btn" id="addToCart" onclick="addToCart(event)"> Add To Cart </button>
                 <h3>Product Details</h3>
                 <br>
                 <p> This medication is used to treat malaria in adults.<br></p>
