--- a/html/pages/cart.html
+++ b/html/pages/cart.html
@@ -21,7 +21,7 @@
                 <li><a href="/html/pages/index.html">Home</a></li>
                 <li><a href="/html/pages/products.html">Products</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="/html/pages/contactus.html">Contact</a></li>
                 <li><a href="/html/pages/account.html">Account</a></li>
             </ul>
         </nav>
